add basic Vaadin config and page structure

--- a/.gitignore
+++ b/.gitignore
@@ -293,3 +293,6 @@ gradle-app.setting
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,osx,eclipse,intellij+all,netbeans,visualstudiocode,java,gradle
 
+node_modules
+package-lock.json
+target
