add graphwiz library; add how to render SVG (or PNG, or JPG, ...) with it starting from the DOT representation of the graph itself

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'com.google.guava:guava:29.0-jre'
     implementation 'org.jgrapht:jgrapht-core:1.5.0'
     implementation 'org.jgrapht:jgrapht-io:1.5.0'
+    implementation 'guru.nidi:graphviz-java:0.17.0'
 
     testImplementation 'junit:junit:4.13'
 }
