--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencyManagement {
 
 dependencies {
     implementation 'com.google.guava:guava:29.0-jre'
+    implementation 'org.jgrapht:jgrapht-core:1.5.0'
+    implementation 'org.jgrapht:jgrapht-io:1.5.0'
+    implementation 'guru.nidi:graphviz-java:0.17.0'
     implementation 'com.vaadin:vaadin-spring-boot-starter'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
