--- a/build.gradle
+++ b/build.gradle
@@ -37,3 +37,11 @@ dependencies {
 application {
     mainClassName = 'com.klarna.secoma.App'
 }
+sourceCompatibility = 14
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += '--enable-preview'
+}
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
